[tool.poetry]
name = "faceless"
version = "0.2.0"
description = "Faceless"
authors = ["Refik Can MALLI <refikcan.malli@mail.polimi.it>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/rcmalli/faceless"
repository = "https://github.com/rcmalli/faceless"
documentation = "https://faceless.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/rcmalli/faceless/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2"}
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.9.1"
xdoctest = "^0.13.0"
sphinx = "^3.1.2"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.1"
reorder-python-imports = "^2.3.1"
pre-commit-hooks = "^3.1.0"

[tool.poetry.scripts]
faceless = "faceless.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["faceless"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
